[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/bridge.gd" type="Script" id=1]
[ext_resource path="res://point.png" type="Texture2D" id=2]
[ext_resource path="res://banana.png" type="Texture2D" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="bridge" type="Node2D" groups=["bridge"]]
z_index = -1
z_as_relative = false
script = ExtResource( 1 )

[node name="start" type="Sprite2D" parent="."]
scale = Vector2( 0.35, 0.35 )
z_index = 1
texture = ExtResource( 2 )
hframes = 2

[node name="end" type="Sprite2D" parent="."]
scale = Vector2( 0.35, 0.35 )
z_index = 1
texture = ExtResource( 2 )
hframes = 2

[node name="Button" type="Button" parent="end"]
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = 17.0
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/pressed = SubResource( 2 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/disabled = SubResource( 3 )
theme_override_styles/normal = SubResource( 3 )

[node name="Banana" type="Sprite2D" parent="."]
visible = false
modulate = Color( 0.12549, 0.584314, 0.866667, 1 )
position = Vector2( 55, 23 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[connection signal="button_down" from="end/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="end/Button" to="." method="_on_Button_button_up"]
